# HPC-pairwise-distance-optimization

./: CMakeLists.txt  README.md  pairwise_distance.c  pairwise_distance_mkl.c  pdist_mkl_float_func.c  pw_dist_mkl_func.c  recompile_run.sh  run_Linux.sh  run_MacOS.sh  test_float.c  util.c  util.h
dgemm/: Makefile  README.md  kernels.h  test.c  utils.c
dgemm/include/: kernel1.h  kernel10.h  kernel101.h  kernel11.h  kernel111.h  kernel112.h  kernel12.h  kernel120.h  kernel121.h  kernel122.h  kernel13.h  kernel130.h  kernel2.h  kernel3.h  kernel30.h  kernel4.h  kernel5.h  kernel50.h  kernel6.h  kernel7.h  kernel8.h  kernel9.h  kernel91.h  kernel92.h
pairwise_distance/: CMakeLists.txt  README.md  pairwise_distance_matlab.c  pairwise_distance_mkl.c  pdist_mkl_float_func.h  pw_dist_mkl_func.c  pw_dist_mkl_func.h  test.c  test_float_perf.sh  test_perf.sh
